# descrow

./: .gitignore  Makefile  README.md
_archive/enclave/: Cargo.toml
_archive/enclave/src/: tss.rs
app/: Enclave_u.c  Enclave_u.h  app.c
core/: Makefile
core/app/: app.c
core/enclave/: Cargo.toml  Enclave.edl  Makefile
core/enclave/src/: keygen.rs  lib.rs  shamir.rs  tlsclient.rs
dependencies/sgx_unwind/libunwind/: Makefile.in  configure
dependencies/sgx_unwind/libunwind/autom4te.cache/: output.2  output.3  requests  traces.2  traces.3
dependencies/sgx_unwind/libunwind/src/: Makefile.in
doc/: complains.md  shamir.md  tls.md
enclave/: Cargo.toml  Enclave.edl  Enclave_t.c  Enclave_t.h  Makefile
enclave/src/: error.rs  keygen.rs  lib.rs  seal.rs  tss.rs
escrow/: Makefile
escrow/app/: Cargo.toml
escrow/app/src/: main.rs
escrow/enclave/: Cargo.toml  Enclave.edl
escrow/enclave/src/: keygen.rs  lib.rs
tlsclient/: Makefile
tlsclient/app/src/: main.rs
tlsclient/enclave/: Cargo.toml
tlsserver/app/: Cargo.toml
tlsserver/app/src/: main.rs
tlsserver/enclave/: Cargo.toml
