[package]
name = "app"
version = "1.0.0"
authors = ["The Teaclave Authors"]
build = "build.rs"

[dependencies]
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_urts = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tstd = { git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["net"] }
mio = "0.6"

[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
sgx_types = { path = "../../dependencies/sgx_types" }
sgx_urts = { path = "../../dependencies/sgx_urts" }
